just trying to select an Id

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </header>
       
       <main>
-        <section id="Services">
+        <section id="services">
           <h2>DJ Services</h2>
           <p>In need of an MC, host, music, or all of the above, at your event? MC-C DJ Services is here to help. Below is a selection of events we have covered in the past, but we're hoping to expand it!</p>
             <ul>
