changing header to wrap correctly

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <nav id="nav-bar">
         <ul>
           <li>
-            <a href="#Services" class="nav-link">Services</a>
+            <a href="#Services" class="nav-link">Services  / </a>
           </li>
           <li>
-            <a href="#Guarantees" class="nav-link">Guarantees</a>
+            <a href="#Guarantees" class="nav-link">Guarantees /</a>
           </li>
           <li>
-            <a href="#Pricing" class="nav-link">Pricing</a>
+            <a href="#Pricing" class="nav-link">Pricing /</a>
           </li>
           <li>
-            <a href="#Watch" class="nav-link">Watch us in action</a>
+            <a href="#Watch" class="nav-link">Watch us in action /</a>
             </li>
           <li>
-            <a href="#Testimonials" class="nav-link">Testimonials</a>
+            <a href="#Testimonials" class="nav-link">Testimonials /</a>
             </li>
           </ul>
         </nav>
